fix: remove white space at the bottom

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+  min-height: 100vw;
   min-width: 320px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
